sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:20: error: value or is not a member of Boolean
  }while (ecart>=1 or inverse==true)
                   ^